RocketShip Changelog

03-10-2015

    - Primitive Object Types BETA 2
    - Fixed HTML Helper bugs related to bugs with the Primitive Objects
    - Fixed bug with site_url in app that was not set correctly
    - Updated ODM to take advantage of the Primitive Object Types in better way
    - Fixed a bug with cookies in CLI mode (fixing the CLI at the same time)
    - Added 'toRaw' and 'toPrimitive' static methods in Base class

03-08-2015

    - Added Primitive Object Types (String, Number, Collection) -- BETA
    - Updated the system to use new Primitive Object Types
    - Upgrade version to 1.1.0

03-02-2015

    - Added support for dash (-) in (:string) url segments
    - Updated documentation for routes

02-28-2015

    - Added RegexpBuilder to composer for easy Regex programming
    - Fixed 404 Error handling
    - Renamed 404 file in views

02-27-2015

    - Restored weak passphrases for hash and encryption (you need to set those when starting a project)
    - Added the timezone setting at the top of the generate script to silence errors
    - Fixed bug in directive parsing when using a layout that has absolutely no directives

02-21-2015

    - Added Route permissions (allow: all, ip or array of ips)
    - Added forbidden method in error controller
    - Removed useless code from error controller

02-14-2015

    - Cleaned up API's HTTPResponse and JSONHTTPResponse classes
    - Created CacheAdapter interface
    - Refactored Cache adapters to respect the CacheAdapter interface
    - Refactored Session adapters (moved one level up)
    - Refactored UploadDriver to UploadAdapter and type to interface instead of Abstract

02-13-2015

    - Added Mongo driver for Upload manager
    - Added Mongo file serving (for files uploaded using the upload manager)
    - Added support for Mongo upload files in Image class
    - Added distinct Filter class
    - Added new events
    - System events are now constants within the Event class
    - Bug fixes

01-03-2015
